<resources>
    <string name="app_name">Random Color</string>
    <string name="box1">Box 1</string>
    <string name="box2">Box 2</string>
    <string name="box3">Box 3</string>
    <string name="box4">Box 4</string>
    <string name="box5">Box 5</string>
    <string name="box6">Box 6</string>
    <string name="box7">Box 7</string>
    <string name="box8">Box 8</string>
    <string name="box9">Box 9</string>
    <string name="box10">Box 10</string>
    <string name="box11">Box 11</string>
    <string name="box12">Box 12</string>
</resources>