<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="16dp" />

        <TextView
            android:id="@+id/box1"
            style="@style/box1"
            android:text="@string/box1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/box2"
            style="@style/box2"
            android:layout_width="159dp"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            android:text="@string/box2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/box1" />

        <TextView
            android:id="@+id/box3"
            style="@style/box3"
            android:text="@string/box3"
            app:layout_constraintBottom_toTopOf="@+id/box4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/box2"
            app:layout_constraintTop_toTopOf="@+id/box2"
            app:layout_constraintVertical_chainStyle="spread_inside"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/box4"
            style="@style/box4"
            android:text="@string/box4"
            app:layout_constraintBottom_toTopOf="@+id/box5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/box2"
            app:layout_constraintTop_toBottomOf="@+id/box3"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/box5"
            style="@style/box5"
            android:text="@string/box5"
            app:layout_constraintBottom_toBottomOf="@+id/box2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/box2"
            app:layout_constraintTop_toBottomOf="@+id/box4"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/box8"
            style="@style/box8"
            android:layout_marginStart="1dp"
            android:layout_marginTop="16dp"
            android:text="@string/box8"
            app:layout_constraintEnd_toStartOf="@+id/box9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/box7"
            app:layout_constraintStart_toStartOf="@+id/box5"
            app:layout_constraintTop_toBottomOf="@+id/box5"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/box9"
            style="@style/box9"
            android:layout_marginTop="16dp"
            android:text="@string/box9"
            app:layout_constraintEnd_toEndOf="@+id/box5"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/box8"
            app:layout_constraintTop_toBottomOf="@+id/box5" />

        <TextView
            android:id="@+id/box7"
            style="@style/box7"
            android:layout_marginTop="16dp"
            android:text="@string/box7"
            app:layout_constraintEnd_toEndOf="@+id/box2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/box6"
            app:layout_constraintTop_toBottomOf="@+id/box2" />

        <TextView
            android:id="@+id/box6"
            style="@style/box6"
            android:layout_marginTop="16dp"
            android:text="@string/box6"
            app:layout_constraintEnd_toStartOf="@+id/box7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/box2"
            app:layout_constraintStart_toStartOf="@+id/box2"
            app:layout_constraintTop_toBottomOf="@+id/box2" />

        <TextView
            android:id="@+id/box11"
            style="@style/box11"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/box11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/box10"
            app:layout_constraintTop_toBottomOf="@+id/box9"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/box10"
            style="@style/box10"
            android:layout_width="261dp"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:text="@string/box10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/box11" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>